# puregym-bot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yml  config_template.yaml  debug.py  pyproject.toml
.github/workflows/: ci.yml
puregym_bot/: README.md  config.py  datetime_utils.py  formatting.py  main.py  puregym_client.py  pyproject.toml
puregym_bot/bot/: app.py  booking_cycle.py  callback_data.py  dependencies.py  handlers.py  jobs.py  prompts.py  registry.py
puregym_bot/db/: schemas.py
puregym_bot/puregym/: client.py  filters.py  schemas.py
puregym_bot/puregym_bot/: formatting.py  main.py
puregym_bot/puregym_bot/bot/: app.py  booking_cycle.py  callback_data.py  dependencies.py  handlers.py
puregym_bot/storage/: db.py  models.py  repository.py
puregym_bot/tests/: fakes.py  test_booked_classes.py  test_booking_cycle_integration.py  test_callback_data.py
src/puregym_bot/: config.py  main.py
src/puregym_bot/db/: session.py
tests/: conftest.py  fakes.py  test_booked_classes.py  test_booking_cycle_integration.py  test_booking_cycle_steps.py  test_callback_data.py  test_callback_handlers.py  test_commands.py  test_config.py  test_datetime_utils.py  test_startup_state.py
