[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "puregym_bot"
module-root = ""

[project]
name = "puregym-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "pydantic-settings>=2.13.1",
    "python-telegram-bot>=22.6",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
